# rust-axum-api

./: Cargo.toml
src/: main.rs
src/handler/: handler.rs
src/pool/: pool.rs
src/service/: service.rs
