[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
serde = "1.0.197"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "json"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
